refactor!: getAllCurations no longer return blocks
